Added sign in view

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,8 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+/.idea/.gitignore
+/.idea/material_theme_project_new.xml
+/.idea/modules.xml
+/.idea/vcs.xml
+/.idea/GoodStuff_Website_Angular.iml
