--- a/nginx.conf
+++ b/nginx.conf
@@ -11,6 +11,8 @@ server {
 
   location /api/ {
     proxy_pass http://gateway-api:8080/;
+    proxy_set_header Cookie $http_cookie;
+    proxy_pass_request_headers on;
     proxy_http_version 1.1;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
